--- a/pusat/laporan/list.html
+++ b/pusat/laporan/list.html
@@ -67,23 +67,32 @@
         }
 
         .dt-buttons {
+            margin-top: 1rem;
             margin-bottom: 1rem;
+            display: block !important;
+            width: 100% !important;
+            clear: both !important;
         }
 
         .dt-button {
-            background-color: #6366f1 !important;
+            background-color: #16a34a !important;
+            /* Green */
             color: white !important;
             border: none !important;
-            padding: 0.5rem 1rem !important;
-            border-radius: 0.5rem !important;
-            font-size: 0.875rem !important;
+            padding: 0.375rem 0.75rem !important;
+            /* Smaller padding */
+            border-radius: 0 !important;
+            /* No border radius - square */
+            font-size: 0.813rem !important;
+            /* Smaller font */
             font-weight: 500 !important;
             margin-right: 0.5rem !important;
             cursor: pointer !important;
         }
 
         .dt-button:hover {
-            background-color: #4f46e5 !important;
+            background-color: #15803d !important;
+            /* Darker green on hover */
         }
 
         .paginate_button {
@@ -240,6 +249,18 @@
                     </ul>
                 </li>
                 <li>
+                    <a href="../rekapitulasi/index.html"
+                        class="flex items-center px-2 py-1.5 text-gray-500 rounded-lg hover:bg-purple-100 hover:text-indigo-600 transition-colors group">
+                        <svg class="shrink-0 w-5 h-5 transition duration-75 group-hover:text-indigo-600"
+                            aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none"
+                            viewBox="0 0 24 24">
+                            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                d="M9 17h6l3 3v-3h2V9h-2M4 4h11v8H9l-3 3v-3H4V4Z" />
+                        </svg>
+                        <span class="flex-1 ms-3 whitespace-nowrap">Rekapitulasi</span>
+                    </a>
+                </li>
+                <li>
                     <a href="../support/help.html"
                         class="flex items-center px-2 py-1.5 text-gray-500 rounded-lg hover:bg-purple-100 hover:text-indigo-600 transition-colors group">
                         <svg class="shrink-0 w-5 h-5 transition duration-75 group-hover:text-indigo-600"
@@ -288,8 +309,7 @@
 
             <!-- DataTable Card -->
             <div class="bg-white rounded-lg shadow-sm p-6">
-                <div class="flex justify-between items-center mb-4">
-                    <h2 class="text-lg font-semibold text-gray-900">Data RTK Provinsi</h2>
+                <div class="mb-4 text-right">
                     <a href="./upload.html"
                         class="inline-flex items-center px-4 py-2 bg-indigo-600 text-white text-sm font-medium rounded-lg hover:bg-indigo-700 transition-colors">
                         <svg class="w-5 h-5 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
@@ -406,7 +426,7 @@
                 province.name,
                 province.validUntil,
                 `<span class="status-badge ${statusClass}">${status}</span>`,
-                `<button onclick="downloadFile('${province.name}')" class="px-3 py-1.5 bg-blue-600 text-white text-xs rounded hover:bg-blue-700 transition-colors">
+                `<button onclick="downloadFile('${province.name}')" class="px-4 py-2 bg-indigo-600 text-white text-sm rounded-lg hover:bg-indigo-700 transition-colors inline-flex items-center">
                     <svg class="w-4 h-4 inline mr-1" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 10v6m0 0l-3-3m3 3l3-3m2 8H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z"/>
                     </svg>
@@ -419,11 +439,11 @@
         $(document).ready(function () {
             $('#rtkTable').DataTable({
                 data: tableData,
-                dom: 'Bfrtip',
+                dom: '<"row mb-3"<"col-sm-6"l><"col-sm-6"f>><"row mb-3"<"col-sm-12"B>>rtip',  // Row1: length+search, Row2: buttons
                 buttons: [
                     {
                         extend: 'excel',
-                        text: '<svg class="w-4 h-4 inline mr-1" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 10v6m0 0l-3-3m3 3l3-3m2 8H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z"/></svg> Export Excel',
+                        text: '<svg class="w-4 h-4 inline mr-1" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 10v6m0 0l-3-3m3 3l3-3m2 8H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z"/></svg> Excel',
                         title: 'Laporan RTK Provinsi',
                         exportOptions: {
                             columns: [0, 1, 2, 3]
@@ -431,7 +451,7 @@
                     },
                     {
                         extend: 'pdf',
-                        text: '<svg class="w-4 h-4 inline mr-1" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M7 21h10a2 2 0 002-2V9.414a1 1 0 00-.293-.707l-5.414-5.414A1 1 0 0012.586 3H7a2 2 0 00-2 2v14a2 2 0 002 2z"/></svg> Export PDF',
+                        text: '<svg class="w-4 h-4 inline mr-1" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M7 21h10a2 2 0 002-2V9.414a1 1 0 00-.293-.707l-5.414-5.414A1 1 0 0012.586 3H7a2 2 0 00-2 2v14a2 2 0 002 2z"/></svg> PDF',
                         title: 'Laporan RTK Provinsi',
                         exportOptions: {
                             columns: [0, 1, 2, 3]
