--- a/pusat/user/profile.html
+++ b/pusat/user/profile.html
@@ -131,6 +131,18 @@
                     </ul>
                 </li>
                 <li>
+                    <a href="../rekapitulasi/index.html"
+                        class="flex items-center px-2 py-1.5 text-gray-500 rounded-lg hover:bg-purple-100 hover:text-indigo-600 transition-colors group">
+                        <svg class="shrink-0 w-5 h-5 transition duration-75 group-hover:text-indigo-600"
+                            aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none"
+                            viewBox="0 0 24 24">
+                            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                d="M9 17h6l3 3v-3h2V9h-2M4 4h11v8H9l-3 3v-3H4V4Z" />
+                        </svg>
+                        <span class="flex-1 ms-3 whitespace-nowrap">Rekapitulasi</span>
+                    </a>
+                </li>
+                <li>
                     <a href="../support/help.html"
                         class="flex items-center px-2 py-1.5 text-gray-500 rounded-lg hover:bg-purple-100 hover:text-indigo-600 transition-colors group">
                         <svg class="shrink-0 w-5 h-5 transition duration-75 group-hover:text-indigo-600"
@@ -230,6 +242,7 @@
                                 </label>
                                 <div class="relative">
                                     <input type="password" id="password" placeholder="Masukkan password"
+                                        oninput="validatePassword()"
                                         class="w-full px-4 py-3 bg-gray-50 border border-gray-300 rounded-xl focus:ring-2 focus:ring-indigo-500 focus:border-indigo-500 outline-none transition-all pr-12 text-gray-800">
                                     <button onclick="togglePassword('password')" type="button"
                                         class="absolute right-4 top-1/2 transform -translate-y-1/2 text-gray-400 hover:text-gray-600 transition-colors">
@@ -242,6 +255,46 @@
                                         </svg>
                                     </button>
                                 </div>
+
+                                <!-- Password Requirements -->
+                                <div class="mt-3 space-y-2">
+                                    <div id="req-length" class="flex items-center gap-2 text-xs text-gray-500">
+                                        <svg class="w-4 h-4 flex-shrink-0" fill="currentColor" viewBox="0 0 20 20">
+                                            <circle cx="10" cy="10" r="10" opacity="0.3" />
+                                        </svg>
+                                        <span>Minimal 8 karakter</span>
+                                    </div>
+                                    <div id="req-lowercase" class="flex items-center gap-2 text-xs text-gray-500">
+                                        <svg class="w-4 h-4 flex-shrink-0" fill="currentColor" viewBox="0 0 20 20">
+                                            <circle cx="10" cy="10" r="10" opacity="0.3" />
+                                        </svg>
+                                        <span>Terdapat minimal satu huruf kecil</span>
+                                    </div>
+                                    <div id="req-uppercase" class="flex items-center gap-2 text-xs text-gray-500">
+                                        <svg class="w-4 h-4 flex-shrink-0" fill="currentColor" viewBox="0 0 20 20">
+                                            <circle cx="10" cy="10" r="10" opacity="0.3" />
+                                        </svg>
+                                        <span>Terdapat minimal satu huruf besar</span>
+                                    </div>
+                                    <div id="req-number" class="flex items-center gap-2 text-xs text-gray-500">
+                                        <svg class="w-4 h-4 flex-shrink-0" fill="currentColor" viewBox="0 0 20 20">
+                                            <circle cx="10" cy="10" r="10" opacity="0.3" />
+                                        </svg>
+                                        <span>Terdapat minimal satu angka</span>
+                                    </div>
+                                    <div id="req-symbol" class="flex items-center gap-2 text-xs text-gray-500">
+                                        <svg class="w-4 h-4 flex-shrink-0" fill="currentColor" viewBox="0 0 20 20">
+                                            <circle cx="10" cy="10" r="10" opacity="0.3" />
+                                        </svg>
+                                        <span>Terdapat salah satu simbol: ! @ # $ % ^ & *</span>
+                                    </div>
+                                    <div id="req-match" class="flex items-center gap-2 text-xs text-gray-500">
+                                        <svg class="w-4 h-4 flex-shrink-0" fill="currentColor" viewBox="0 0 20 20">
+                                            <circle cx="10" cy="10" r="10" opacity="0.3" />
+                                        </svg>
+                                        <span>Password dan Re-Password cocok</span>
+                                    </div>
+                                </div>
                             </div>
 
                             <!-- Re-Password -->
@@ -251,6 +304,7 @@
                                 </label>
                                 <div class="relative">
                                     <input type="password" id="repassword" placeholder="Masukkan password"
+                                        oninput="validatePasswordMatch()"
                                         class="w-full px-4 py-3 bg-gray-50 border border-gray-300 rounded-xl focus:ring-2 focus:ring-indigo-500 focus:border-indigo-500 outline-none transition-all pr-12 text-gray-800">
                                     <button onclick="togglePassword('repassword')" type="button"
                                         class="absolute right-4 top-1/2 transform -translate-y-1/2 text-gray-400 hover:text-gray-600 transition-colors">
@@ -328,6 +382,60 @@
             }
         }
 
+        // Validate password requirements
+        function validatePassword() {
+            const password = document.getElementById('password').value;
+
+            // Check minimum length (8 characters)
+            const hasLength = password.length >= 8;
+            updateRequirement('req-length', hasLength);
+
+            // Check lowercase
+            const hasLowercase = /[a-z]/.test(password);
+            updateRequirement('req-lowercase', hasLowercase);
+
+            // Check uppercase
+            const hasUppercase = /[A-Z]/.test(password);
+            updateRequirement('req-uppercase', hasUppercase);
+
+            // Check number
+            const hasNumber = /\d/.test(password);
+            updateRequirement('req-number', hasNumber);
+
+            // Check symbol
+            const hasSymbol = /[!@#$%^&*]/.test(password);
+            updateRequirement('req-symbol', hasSymbol);
+
+            // Check password match
+            validatePasswordMatch();
+
+            return hasLength && hasLowercase && hasUppercase && hasNumber && hasSymbol;
+        }
+
+        function validatePasswordMatch() {
+            const password = document.getElementById('password').value;
+            const repassword = document.getElementById('repassword').value;
+
+            // Only check if both fields have values
+            const isMatch = repassword.length > 0 && password === repassword;
+            updateRequirement('req-match', isMatch);
+
+            return isMatch || repassword.length === 0; // Return true if repassword is empty (optional)
+        }
+
+        function updateRequirement(id, isValid) {
+            const element = document.getElementById(id);
+            if (isValid) {
+                element.classList.remove('text-gray-500');
+                element.classList.add('text-green-500');
+                element.querySelector('svg').innerHTML = '<circle cx="10" cy="10" r="10" fill="currentColor"/><path d="M6 10L9 13L14 8" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" fill="none"/>';
+            } else {
+                element.classList.remove('text-green-500');
+                element.classList.add('text-gray-500');
+                element.querySelector('svg').innerHTML = '<circle cx="10" cy="10" r="10" opacity="0.3"/>';
+            }
+        }
+
         // Handle form submit
         function handleSubmit() {
             const nama = document.getElementById('nama').value;
@@ -342,6 +450,11 @@
 
             if (password && password !== repassword) {
                 alert('Password tidak cocok!');
+                return;
+            }
+
+            if (password && !validatePassword()) {
+                alert('Password belum memenuhi semua persyaratan!');
                 return;
             }
 
