--- a/kab-kota/laporan/upload.html
+++ b/kab-kota/laporan/upload.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Upload RTKN | EduLearn - Platform E-Learning Terbaik</title>
+    <title>Upload RTK | EduLearn - Platform E-Learning Terbaik</title>
     <link rel="icon" type="image/svg+xml"
         href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='%236366f1'%3E%3Cpath d='M12 2L2 7v10c0 5.55 3.84 10.74 9 12 5.16-1.26 9-6.45 9-12V7l-10-5zm0 2.18l8 3.6v7.22c0 4.42-3.05 8.62-8 9.81-4.95-1.19-8-5.39-8-9.81V7.78l8-3.6zM11 8v2H9v2h2v2h2v-2h2v-2h-2V8h-2z'/%3E%3C/svg%3E">
     <script src="https://cdn.tailwindcss.com"></script>
@@ -107,20 +107,7 @@
                         </svg>
                         <span class="flex-1 ms-3 whitespace-nowrap">Penyusunan</span>
                     </a>
-                </li>
-                <li>
-                    <a href="#"
-                        class="flex items-center px-2 py-1.5 text-gray-500 rounded-lg hover:bg-purple-100 hover:text-indigo-600 transition-colors group">
-                        <svg class="shrink-0 w-5 h-5 transition duration-75 group-hover:text-indigo-600"
-                            aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none"
-                            viewBox="0 0 24 24">
-                            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                d="M12 4v16m8-8H4m8-4h.01M12 16h.01M16 12h.01M8 12h.01" />
-                        </svg>
-                        <span class="flex-1 ms-3 whitespace-nowrap">Perhitungan</span>
-                    </a>
-                </li>
-                <li>
+                </li><li>
                     <button type="button" data-dropdown-toggle="dropdown-pelaporan"
                         class="flex items-center w-full px-2 py-1.5 text-indigo-600 bg-purple-100 rounded-lg transition-colors group">
                         <svg class="shrink-0 w-5 h-5 text-indigo-600" aria-hidden="true"
@@ -145,13 +132,13 @@
                         <li>
                             <a href="./list.html"
                                 class="flex items-center w-full px-2 py-1.5 text-gray-500 transition-colors rounded-lg pl-11 hover:bg-purple-100 hover:text-indigo-600">
-                                Daftar RTKN
+                                Daftar RTK
                             </a>
                         </li>
                     </ul>
                 </li>
                 <li>
-                    <a href="../rekapitulasi/index.html"
+                    <a href="../report/index.html"
                         class="flex items-center px-2 py-1.5 text-gray-500 rounded-lg hover:bg-purple-100 hover:text-indigo-600 transition-colors group">
                         <svg class="shrink-0 w-5 h-5 transition duration-75 group-hover:text-indigo-600"
                             aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none"
@@ -159,7 +146,7 @@
                             <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                                 d="M9 17h6l3 3v-3h2V9h-2M4 4h11v8H9l-3 3v-3H4V4Z" />
                         </svg>
-                        <span class="flex-1 ms-3 whitespace-nowrap">Rekapitulasi</span>
+                        <span class="flex-1 ms-3 whitespace-nowrap">Report</span>
                     </a>
                 </li>
                 <li>
@@ -205,7 +192,7 @@
                             </svg>
                             <a href="./list.html"
                                 class="ml-1 text-sm font-medium text-gray-700 hover:text-indigo-600 md:ml-2">Daftar
-                                Laporan RTKN</a>
+                                Laporan RTK</a>
                         </div>
                     </li>
                     <li>
@@ -215,7 +202,7 @@
                                     d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z"
                                     clip-rule="evenodd"></path>
                             </svg>
-                            <span class="ml-1 text-sm font-medium text-gray-500 md:ml-2">Upload RTKN</span>
+                            <span class="ml-1 text-sm font-medium text-gray-500 md:ml-2">Upload RTK</span>
                         </div>
                     </li>
                 </ol>
@@ -234,7 +221,7 @@
                                 </label>
                                 <input type="text" id="documentName" name="documentName" required
                                     class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-indigo-500 focus:border-indigo-500"
-                                    placeholder="Masukkan nama dokumen RTKN">
+                                    placeholder="Masukkan nama dokumen RTK">
                             </div>
 
                             <!-- Tahun Berlaku -->
@@ -261,7 +248,7 @@
                             <!-- File Upload -->
                             <div>
                                 <label class="block text-sm font-medium text-gray-700 mb-2">
-                                    Upload Dokumen RTKN <span class="text-red-500">*</span>
+                                    Upload Dokumen RTK <span class="text-red-500">*</span>
                                 </label>
                                 <div class="file-upload-area rounded-lg p-8 text-center cursor-pointer"
                                     id="fileUploadArea">
@@ -319,7 +306,7 @@
                                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                                             d="M5 13l4 4L19 7" />
                                     </svg>
-                                    Submit RTKN
+                                    Submit RTK
                                 </button>
                             </div>
                         </form>
@@ -507,12 +494,12 @@
 
             // Validate file
             if (!currentFile) {
-                alert('Silakan pilih file RTKN untuk diupload!');
+                alert('Silakan pilih file RTK untuk diupload!');
                 return;
             }
 
             // Show success message
-            alert(`RTKN berhasil diupload!\n\nNama: ${documentName}\nBerlaku: ${validFrom} - ${validUntil}\nFile: ${currentFile.name}\n\nCatatan: Dalam implementasi nyata, data akan dikirim ke server.`);
+            alert(`RTK berhasil diupload!\n\nNama: ${documentName}\nBerlaku: ${validFrom} - ${validUntil}\nFile: ${currentFile.name}\n\nCatatan: Dalam implementasi nyata, data akan dikirim ke server.`);
 
             // Redirect to list page
             window.location.href = './list.html';
