--- a/kab-kota/susun/create.html
+++ b/kab-kota/susun/create.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Create Project RTKN | EduLearn - Platform E-Learning Terbaik</title>
+    <title>Create Project RTK | EduLearn - Platform E-Learning Terbaik</title>
     <link rel="icon" type="image/svg+xml"
         href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='%236366f1'%3E%3Cpath d='M12 2L2 7v10c0 5.55 3.84 10.74 9 12 5.16-1.26 9-6.45 9-12V7l-10-5zm0 2.18l8 3.6v7.22c0 4.42-3.05 8.62-8 9.81-4.95-1.19-8-5.39-8-9.81V7.78l8-3.6zM11 8v2H9v2h2v2h2v-2h2v-2h-2V8h-2z'/%3E%3C/svg%3E">
     <script src="https://cdn.tailwindcss.com"></script>
@@ -127,20 +127,7 @@
                         </svg>
                         <span class="flex-1 ms-3 whitespace-nowrap">Penyusunan</span>
                     </a>
-                </li>
-                <li>
-                    <a href="#"
-                        class="flex items-center px-2 py-1.5 text-gray-500 rounded-lg hover:bg-purple-100 hover:text-indigo-600 transition-colors group">
-                        <svg class="shrink-0 w-5 h-5 transition duration-75 group-hover:text-indigo-600"
-                            aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none"
-                            viewBox="0 0 24 24">
-                            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                d="M12 4v16m8-8H4m8-4h.01M12 16h.01M16 12h.01M8 12h.01" />
-                        </svg>
-                        <span class="flex-1 ms-3 whitespace-nowrap">Perhitungan</span>
-                    </a>
-                </li>
-                <li>
+                </li><li>
                     <button type="button" data-dropdown-toggle="dropdown-pelaporan"
                         class="flex items-center w-full px-2 py-1.5 text-gray-500 rounded-lg hover:bg-purple-100 hover:text-indigo-600 transition-colors group">
                         <svg class="shrink-0 w-5 h-5 transition duration-75 group-hover:text-indigo-600"
@@ -166,13 +153,13 @@
                         <li>
                             <a href="../laporan/list.html"
                                 class="flex items-center w-full px-2 py-1.5 text-gray-500 transition-colors rounded-lg pl-11 hover:bg-purple-100 hover:text-indigo-600">
-                                Daftar RTKN
+                                Daftar RTK
                             </a>
                         </li>
                     </ul>
                 </li>
                 <li>
-                    <a href="../rekapitulasi/index.html"
+                    <a href="../report/index.html"
                         class="flex items-center px-2 py-1.5 text-gray-500 rounded-lg hover:bg-purple-100 hover:text-indigo-600 transition-colors group">
                         <svg class="shrink-0 w-5 h-5 transition duration-75 group-hover:text-indigo-600"
                             aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none"
@@ -180,7 +167,7 @@
                             <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                                 d="M9 17h6l3 3v-3h2V9h-2M4 4h11v8H9l-3 3v-3H4V4Z" />
                         </svg>
-                        <span class="flex-1 ms-3 whitespace-nowrap">Rekapitulasi</span>
+                        <span class="flex-1 ms-3 whitespace-nowrap">Report</span>
                     </a>
                 </li>
                 <li>
@@ -244,8 +231,8 @@
             <!-- Form Card -->
             <div class="bg-white rounded-lg shadow-sm p-8 max-w-2xl mx-auto">
                 <div class="mb-6">
-                    <h1 class="text-2xl font-bold text-gray-900">Create New RTKN Project</h1>
-                    <p class="text-gray-600 mt-1">Buat project RTKN baru dengan mengisi form di bawah ini</p>
+                    <h1 class="text-2xl font-bold text-gray-900">Create New RTK Project</h1>
+                    <p class="text-gray-600 mt-1">Buat project RTK baru dengan mengisi form di bawah ini</p>
                 </div>
 
                 <form id="createProjectForm" class="space-y-6">
@@ -256,7 +243,7 @@
                         </label>
                         <input type="text" id="projectName" name="projectName" required
                             class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-indigo-500 focus:border-indigo-500"
-                            placeholder="Contoh: RTKN Sektor Industri Manufaktur 2025">
+                            placeholder="Contoh: RTK Sektor Industri Manufaktur 2025">
                     </div>
 
                     <!-- Ketua Tim -->
