--- a/user/index.html
+++ b/user/index.html
@@ -39,8 +39,8 @@
                         class="sm:hidden p-2 rounded-lg hover:bg-gray-200"><svg class="w-6 h-6" fill="none"
                             stroke="currentColor" viewBox="0 0 24 24">
                             <path stroke-linecap="round" stroke-width="2" d="M5 7h14M5 12h14M5 17h10" />
-                        </svg></button><a href="./index.html" class="flex ms-2"><svg
-                            class="w-8 h-8 text-indigo-600" fill="currentColor" viewBox="0 0 24 24">
+                        </svg></button><a href="./index.html" class="flex ms-2"><svg class="w-8 h-8 text-indigo-600"
+                            fill="currentColor" viewBox="0 0 24 24">
                             <path
                                 d="M12 2L2 7v10c0 5.55 3.84 10.74 9 12 5.16-1.26 9-6.45 9-12V7l-10-5zm0 2.18l8 3.6v7.22c0 4.42-3.05 8.62-8 9.81-4.95-1.19-8-5.39-8-9.81V7.78l8-3.6zM11 8v2H9v2h2v2h2v-2h2v-2h-2V8h-2z" />
                         </svg><span class="text-lg font-semibold ms-2">EduLearn</span></a></div><button
@@ -55,7 +55,8 @@
                     </div>
                     <ul class="p-2 text-sm">
                         <!-- Menu Profile -->
-                        <li><a href="./biasa/user/profile.html" class="block p-2 hover:bg-purple-200 rounded">Profil</a></li>
+                        <li><a href="./biasa/user/profile.html" class="block p-2 hover:bg-purple-200 rounded">Profil</a>
+                        </li>
                         <li><a href="/auth/login.html" class="block p-2 hover:bg-purple-200 rounded">Keluar</a></li>
                     </ul>
                 </div>
@@ -138,16 +139,36 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#"
-                        class="flex items-center px-2 py-1.5 text-gray-500 rounded-lg hover:bg-purple-100 hover:text-indigo-600 transition-colors group">
-                        <svg class="shrink-0 w-5 h-5 transition duration-75 group-hover:text-indigo-600"
-                            aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none"
-                            viewBox="0 0 24 24">
-                            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                d="M12 4v16m8-8H4m8-4h.01M12 16h.01M16 12h.01M8 12h.01" />
+                    <button data-dropdown-toggle="dropdown-perhitungan"
+                        class="flex items-center justify-between w-full px-2 py-1.5 text-gray-500 rounded-lg hover:bg-purple-100 hover:text-indigo-600 transition-colors group">
+                        <div class="flex items-center">
+                            <svg class="shrink-0 w-5 h-5 transition duration-75 group-hover:text-indigo-600"
+                                aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none"
+                                viewBox="0 0 24 24">
+                                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
+                                    stroke-width="2" d="M12 4v16m8-8H4m8-4h.01M12 16h.01M16 12h.01M8 12h.01" />
+                            </svg>
+                            <span class="flex-1 ms-3 whitespace-nowrap">Perhitungan</span>
+                        </div>
+                        <svg class="w-3 h-3 transition-transform dropdown-arrow" fill="none" stroke="currentColor"
+                            viewBox="0 0 10 6">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 4 4 4-4" />
                         </svg>
-                        <span class="flex-1 ms-3 whitespace-nowrap">Perhitungan</span>
-                    </a>
+                    </button>
+                    <ul id="dropdown-perhitungan" class="hidden py-2 space-y-2">
+                        <li>
+                            <a href="./tim/perhitungan.html"
+                                class="flex items-center w-full px-2 py-1.5 ps-10 text-gray-500 rounded-lg hover:bg-purple-100 hover:text-indigo-600 transition-colors">
+                                Daftar
+                            </a>
+                        </li>
+                        <li>
+                            <a href="./tim/draft.html"
+                                class="flex items-center w-full px-2 py-1.5 ps-10 text-gray-500 rounded-lg hover:bg-purple-100 hover:text-indigo-600 transition-colors">
+                                Draft
+                            </a>
+                        </li>
+                    </ul>
                 </li>
                 <li>
                     <a href="./biasa/support/help.html"
@@ -357,6 +378,14 @@
         // Toggle dropdown menu
         document.querySelector('[data-dropdown-toggle="dropdown-user"]').addEventListener('click', function () {
             document.getElementById('dropdown-user').classList.toggle('hidden');
+        });
+
+        // Toggle Perhitungan dropdown
+        document.querySelector('[data-dropdown-toggle="dropdown-perhitungan"]')?.addEventListener('click', function () {
+            const dropdown = document.getElementById('dropdown-perhitungan');
+            const arrow = this.querySelector('.dropdown-arrow');
+            dropdown.classList.toggle('hidden');
+            arrow?.classList.toggle('rotate-180');
         });
 
         // Toggle sidebar on mobile
